tests/baselines/reference/enumBasics1.errors.txt
enumBasics1.ts(26,5): error TS2339: Property 'A' does not exist on type 'E.A'.
enumBasics1.ts(29,6): error TS2567: Enum declarations can only merge with namespace declarations.
enumBasics1.ts(34,6): error TS2567: Enum declarations can only merge with namespace declarations.


==== enumBasics1.ts (3 errors) ====
    enum E {
    	A = 1,
    	B,
    	C
    }
    
    /*
    var a: E;
    var b = E["B"]; // shouldn't error
    
    
    function foo(e: E) {}
    
    foo(a); // shouldn't error
    
    
    class C {
    	public e: E;
    
    	public m(): E { return this.e; } // shouldn't error
    }
    
    
    var e = E; // shouldn't error
    */
    E.A.A; // should error
        ~
!!! error TS2339: Property 'A' does not exist on type 'E.A'.
    
    
    enum E2 {
         ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    	A,
    	B,
    }
    
    enum E2 { // should error for continued autonumbering
         ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    	C,
    	D,
    }